--- a/src/info.html
+++ b/src/info.html
@@ -11,7 +11,7 @@ Despite the fact it's created for flash files, AxlLoader also provides primitive
 	<li>textual - xml, json, csv, txt</li>
 </ul>
 <font size="18"><p>Opening files</p></font>
-There is number of ways to load content in AxlLoader. Choose your facourite.
+There is number of ways to load content in AxlLoader. Choose your favourite.
 <ul>
 	<li>Drag and drop files onto application window or desktop icon</li>
 	<li>Associate files with AxlLoader - choose it as your default application for opening swf files</li>
@@ -32,7 +32,7 @@ Second controlls using LiveArranger.
 	<li><b>ctrl/cmd + t</b> : show/hide FlashVars window </li>
 	<li><b>ctrl/cmd + shift + c</b> : show/hide Console window </li>
 	<li><b>ctrl/cmd + shift + h</b> : show/hide History window </li>
-	<li><b>F6</b>: switch on / switch off <a href="http://axldns.com/?page_id=98" target='_blank'>LiveArranger</a> - on screen display list editor. When LiveArranger is on:</li>
+	<li><b>F6</b>: switch on / switch off <a href="http://axldns.com/?page_id=98" >LiveArranger</a> - on screen display list editor. When LiveArranger is on:</li>
 	<li><ul>
 			<li><b>PageUp, PageDown, Home</b> – opens/closes editor widget for selected object</li>
 			<li><b>ESC</b> – closes editor. If editor is closed, turns arranger off.</li>
